feat: guided exploration, SDK refactoring, and Starlight website
- Refactor SDK into api/core/plugin modules with stub pattern
- Add distance-guided and condition-balanced exploration strategies
- Overhaul simulator engine: simulated time, randomness, networking,
faults
- Add offline instrumentation with parallel processing
- Add SSLSocket support for simulated network layer
- Overhaul HTML reports with JTE templating and Alpine.js
- Configure Maven Central publishing via central-publishing-maven-plugin
- Migrate documentation website from MkDocs to Starlight (Astro)